game.html cleanup. Moves a bunch of classes to their own files

--- a/public/game.html
+++ b/public/game.html
@@ -14,294 +14,20 @@
     <a href="https://github.com/maxpblum/Hanubi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
     <div id="main"></div>
     <script type="text/jsx" src="js/chat.jsx"></script>
+    <script type="text/jsx" src="js/cards.jsx"></script>
+    <script type="text/jsx" src="js/piles.jsx"></script>
+    <script type="text/jsx" src="js/hands.jsx"></script>
+    <script type="text/jsx" src="js/game.jsx"></script>
+
     <script type="text/jsx">
       /** @jsx React.DOM */
       // The above declaration must remain intact at the top of the script.
 
       var app = app || {};
-      var Chat = app.Chat;
+      app.gameId = location.search.split('=')[1];
+      app.socket = io("/" + app.gameId);
 
-      var gameID = location.search.split('=')[1];
-      var socket = io("/" + gameID);
-
-      var state
-      var yourPlayerNum = 0
-
-      var VisCard = React.createClass({
-        showDialog: function(recipient, suit, number) {
-          if (state.whoseTurn != yourPlayerNum || this.props.displayOnly)
-            return
-
-          if (document.getElementById('playOrDiscardWindow').open)
-            document.getElementById('playOrDiscardWindow').close()
-
-          var dialog = document.getElementById('clueWindow')
-          dialog.show();
-
-          document.getElementById('giveClueAboutSuit').onclick = function() {
-            socket.emit('clue', JSON.stringify({
-              giver: yourPlayerNum,
-              recipient: recipient,
-              suitOrNumber: suit
-            }))
-            dialog.close()
-          }
-
-          document.getElementById('giveClueAboutNumber').onclick = function() {
-            socket.emit('clue', JSON.stringify({
-              giver: yourPlayerNum,
-              recipient: recipient,
-              suitOrNumber: number
-            }))
-            dialog.close()
-          }
-
-          document.getElementById('cancelClueWindow').onclick = function() { dialog.close() }
-        },
-
-        render: function() {
-          return (
-            <div className="cardContainer">
-              <button className={suitToCardClass(this.props.suit)} 
-                      onClick={function() {
-                        this.showDialog(this.props.playerNum, this.props.suit, this.props.number)
-                      }.bind(this)}>
-                {this.props.number}
-              </button>
-            </div>
-          )
-        }
-      })
-
-      var InvisCard = React.createClass({
-        showDialog: function(cardIndex) {
-          if (state.whoseTurn != yourPlayerNum || this.props.displayOnly)
-            return
-
-          if (document.getElementById('clueWindow').open)
-            document.getElementById('clueWindow').close()
-
-          var dialog = document.getElementById('playOrDiscardWindow')
-          dialog.show();
-
-          document.getElementById('playCard').onclick = function() {
-            socket.emit('playCard', JSON.stringify({
-              player: yourPlayerNum,
-              cardIndex: cardIndex
-            }))
-            dialog.close()
-          }
-
-          document.getElementById('discard').onclick = function() {
-            socket.emit('discard', JSON.stringify({
-              player: yourPlayerNum,
-              cardIndex: cardIndex
-            }))
-            dialog.close()
-          }
-
-          document.getElementById('cancelPDWindow').onclick = function() { dialog.close() }
-        },
-
-        renderCard: function(card) {
-          return <invisCard displayOnly={false} suit={card.suit} number={card.number}/>
-        },
-
-        render: function() {
-          return (
-            <div className="cardContainer">
-              <button className="invisCard" displayOnly={false} onClick={function(){ this.showDialog(this.props.key) }.bind(this)}>?</button>
-            </div>
-          )
-        }
-      })
-
-      var TeamPiles = React.createClass({
-        renderCard: function(card) {
-          return <VisCard displayOnly={true} suit={card.suit} number={card.number}/>
-        },
-        render: function() {
-          var dummies = [{number: "_", suit: "blue"},
-                         {number: "_", suit: "red"},
-                         {number: "_", suit: "green"},
-                         {number: "_", suit: "white"},
-                         {number: "_", suit: "yellow"}];
-          this.props.cards.forEach(function(card) {
-            dummies.forEach(function(dummy) {
-              if(dummy.suit === card.suit) {
-                dummy.number = card.number;
-              }
-            })
-          });
-
-          var deckLength = this.props.deckLength;
-          var lastValue  = deckLength < 10 ? deckLength : "?";
-          var deckCards  = [1, 2, lastValue].slice(0, deckLength);
-          var lives = this.props.lives;
-          var clues = this.props.clues;
-          var score = this.props.score;
-
-          var renderDeckCard = function(val) {
-            return <button className="invisCard">{val}</button>
-          };
-          return(<div id="team-pile" className="cards">
-                    <div className="cardContainer deckPile">
-                      {deckCards.map(renderDeckCard)}
-                    </div>
-                    {dummies.map(this.renderCard)}
-                    <div className="stats">
-                      <span>{lives}<i className="fa fa-heart"></i></span><br/>
-                      <span>{clues}<i className="fa fa-comment"></i></span><br/>
-                      <span>{score}<i className="fa fa-star"></i></span><br/>
-                    </div>
-                 </div>)
-        }
-      })
-
-      var Discards = React.createClass({
-        renderCard: function(card) {
-          return <VisCard displayOnly={true} suit={card.suit} number={card.number}/>
-        },
-        render: function() {
-          return(<div className="cards discards">{this.props.cards.map(this.renderCard)}</div>
-          )
-        }       
-      })
-      
-      var MyHand = React.createClass({
-        render: function() {
-          var cards = []
-          for (var c = 0; c < this.props.yourCards; c++)
-            cards.push(<InvisCard displayOnly={false} key={c}/>)
-
-          return(
-            <tr className={this.props.active ? 'currentPlayer' : ''}>
-              <td className="text">{this.props.name}</td>
-              <td className="cards hand">{cards}</td>
-            </tr>
-          )
-        }
-      })
-
-      var OtherHand = React.createClass({
-        renderCards: function() {
-          var cards = []
-          for (var c = 0; c < this.props.cards.length; c++) {
-            var card = this.props.cards[c]
-            cards.push(<VisCard displayOnly={false} suit={card.suit} number={card.number} playerNum={this.props.playerNum}/>)
-          }
-          return cards
-        },
-
-        render: function() {
-          return(
-            <tr className={this.props.active ? 'currentPlayer' : ''}>
-              <td className="text">{this.props.name}</td>
-              <td className="cards hand">{this.renderCards()}</td>
-            </tr>
-          )
-        }
-      })
-
-      // <VisCard suit={card.suit} Number={card.Number} key={cardKey}/>
-
-      function suitToCardClass(suitName) {
-        return suitName + 'card'
-      }
-
-      var Players = React.createClass({
-        makeHands: function(listOfHands) {
-          var hands = []
-          for (var h = 0; h < listOfHands.length; h++) {
-            if (listOfHands[h])
-              hands.push(<OtherHand active={h === this.props.whoseTurn} cards={listOfHands[h]} playerNum={h} name={this.props.names[h]}/>);
-            else
-              hands.push(<MyHand active={h === this.props.whoseTurn} yourCards={this.props.yourCards} name={this.props.names[h]}/>);
-          }
-          return hands
-        },
-
-        render: function() {
-          return <table>{this.makeHands(this.props.hands)}</table>
-        }
-      })
-
-      var WholeGame = React.createClass({
-        getInitialState: function() {
-
-          socket.on('connect', function() {
-            this.setState({text: "Connect"});
-          }.bind(this))
-
-          socket.on('killGame', function() {
-            window.location.href = '/';            
-          })
-          socket.on('gameState', this.gameState)
-          socket.on('players', this.setNames)
-          socket.on('erra', this.showError)
-          socket.on('clue', function(clue) {
-            clue = JSON.parse(clue);
-            clue.giver = this.state.names[clue.giver];
-            clue.recipient = this.state.names[clue.recipient];
-            this.refs.chat.showClue(clue);
-          }.bind(this));
-          socket.on('move', function(move) {
-            move = JSON.parse(move)
-            move.player = this.state.names[move.player];
-            this.refs.chat.showMove(move);
-          }.bind(this));
-
-          state = {hands: [[0]],
-                  teamPiles: [],
-                  discards: [],
-                  yourPlayerNum: 0,
-                  names: ['No Name']}
-
-          return state
-        },
-
-        showError: function(message) {
-          this.refs.chat.flushMessage({name: 'Hanubi', text: message});
-        },
-
-        setNames: function(names) {
-          var playerNames = [];
-          names.forEach(function(nameObj) {
-            playerNames[nameObj.id] = nameObj.name;
-          });
-          this.setState({names: playerNames});
-        },
-
-        gameState: function(game) {
-          yourPlayerNum = game.youAre
-          state = game
-          if (game.gameIsOver) {
-            this.refs.chat.flushMessage({name:'Hanubi', text:'The game is over! Your final score is ' + game.score});
-          }
-          this.setState(state)
-        },
-
-        render: function() {
-          var names = this.state.names.slice();
-          var yourName = names.splice(yourPlayerNum, 1, undefined)[0];
-          return(
-            <div id="game">
-              <div id="cards">
-                <TeamPiles cards={this.state.teamPiles} deckLength={this.state.deckLength} lives={this.state.lives} clues={this.state.clues} score={this.state.score}/>
-                <Discards cards={this.state.discards}/>
-                <Players hands={this.state.hands} names={this.state.names} yourCards={this.state.yourCards} whoseTurn={this.state.whoseTurn}/>
-              </div>
-              <Chat socket={socket} ref="chat" playerCount={this.state.hands.length}/>
-            </div>
-          )
-        }
-      })
-
-      React.renderComponent(
-        <WholeGame />,
-        document.getElementById('main')
-      )
-
+      React.renderComponent(<Hanubi />, document.getElementById('main'));
 
     </script>
     <dialog id="clueWindow" class="dialog">
